docs+env: update AGENTS/README; add ai/*, root justfile, tests; ignore scrnaseq/data
- Include data checklist, params map, tasks\n- Add root justfile and smoke test\n- Normalize ENV and add skip_emptydrops\n- Keep staged justfile symlink relative for portability

--- a/scrnaseq/test.config
+++ b/scrnaseq/test.config
@@ -15,6 +15,8 @@ params {
     // Match nf-core/scrnaseq test profile
     aligner  = 'star'
     protocol = '10XV2'
+    // small dataset does not have sufficient data for emptydrops module
+    skip_emptydrops = true
 
     config_profile_name        = 'Offline test profile'
     config_profile_description = 'Minimal offline test dataset to check pipeline function'
@@ -42,4 +44,3 @@ process {
         time: '1.h'
     ]
 }
-
